Use Travis to run Tox
Tox allows for finer grain control of python version and dependencies

--- a/tox.ini
+++ b/tox.ini
@@ -15,3 +15,12 @@ commands = python runtests.py
 deps =
     django18: Django>=1.8,<1.9
     django19: Django>=1.9,<1.10
+
+[testenv:coverage]
+commands =
+    coverage run --source json_patch runtests.py
+    coveralls
+deps =
+    coverage
+    coveralls
+    {[testenv]deps}
