--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,22 @@
-# Config file for automatic testing at travis-ci.org
-
 language: python
 
-python:
-  - "3.5"
-  - "3.4"
-  - "3.3"
-  - "2.7"
+sudo: false
 
-before_install:
-  - pip install codecov
+env:
+  - TOX_ENV=py35-django19
+  - TOX_ENV=py34-django19
+  - TOX_ENV=py27-django19
+  - TOX_ENV=py34-django18
+  - TOX_ENV=py33-django18
+  - TOX_ENV=py27-django18
+  - TOX_ENV=coverage
 
-# command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
-install: pip install -r requirements-test.txt
+install:
+  - pip install tox
 
-# command to run tests using coverage, e.g. python setup.py test
-script: coverage run --source json_patch runtests.py
+script:
+    - tox -e $TOX_ENV
 
 after_success:
-  - codecov
+    - pip install codecov
+    - codecov -e TOX_ENV
