Set python interpreter for coverage

--- a/tox.ini
+++ b/tox.ini
@@ -17,10 +17,14 @@ deps =
     django19: Django>=1.9,<1.10
 
 [testenv:coverage]
+basepython =
+    python3.4
+setenv =
+    PYTHONPATH = {toxinidir}:{toxinidir}/json_patch
 commands =
     coverage run --source json_patch runtests.py
     coveralls
 deps =
     coverage
     coveralls
-    {[testenv]deps}
+    Django>=1.9,<1.10
