--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+# Borrowed from https://github.com/tomchristie/django-rest-framework/blob/master/.travis.yml
 language: python
 
 sudo: false
@@ -10,6 +11,12 @@ env:
   - TOX_ENV=py33-django18
   - TOX_ENV=py27-django18
   - TOX_ENV=coverage
+
+matrix:
+    # Python 3.5 not yet available on travis, watch this to see when it is.
+  fast_finish: true
+  allow_failures:
+    - env: TOX_ENV=py35-django19
 
 install:
   - pip install tox
