--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ env:
   - TOX_ENV=py34-django18
   - TOX_ENV=py33-django18
   - TOX_ENV=py27-django18
+  - TOX_ENV=coverage
 
 matrix:
     # Python 3.5 not yet available on travis, watch this to see when it is.
