Move codecov to tox

--- a/tox.ini
+++ b/tox.ini
@@ -21,10 +21,11 @@ basepython =
     python3.4
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/json_patch
+passenv = CI TRAVIS_BUILD_ID TRAVIS TRAVIS_BRANCH TRAVIS_JOB_NUMBER TRAVIS_PULL_REQUEST TRAVIS_JOB_ID TRAVIS_REPO_SLUG TRAVIS_COMMIT
 commands =
     coverage run --source json_patch runtests.py
-    coveralls
+    codecov
 deps =
     coverage
-    coveralls
+    codecov
     Django>=1.9,<1.10
